更新 + 效果图

--- a/index-svg.html
+++ b/index-svg.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ko" lang="ko">
   <head>
     <title>Cross-Browser QRCode generator for Javascript</title>
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="qrcode.js"></script>
   </head>
   <body>
-  <input id="text" type="text" value="http://jindo.dev.naver.com/collie" style="width:80%" />
+  <input id="text" type="text" value="https://github.com/ybx13579" style="width:80%" />
   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <g id="qrcode"/>
   </svg>
